Added check for behavior feature existense

Sometimes JSONReader fails to read json from resources(or resources are broken).
So add some error checking to prevent browser crash in such cases. See
https://bugs.chromium.org/p/chromium/issues/detail?id=176381 for more details

BUG=602936

Review URL: https://codereview.chromium.org/1835863002

Cr-Commit-Position: refs/heads/master@{#387565}

Former-commit-id: 604a2ac93c3427d614e100a699e16567dae14ef9