chrome/browser/extensions/extension_util.cc
@@ -28,6 +28,7 @@
 #include "extensions/common/extension_icon_set.h"
 #include "extensions/common/feature_switch.h"
 #include "extensions/common/features/behavior_feature.h"
+#include "extensions/common/features/feature.h"
 #include "extensions/common/features/feature_provider.h"
 #include "extensions/common/manifest.h"
 #include "extensions/common/manifest_handlers/app_isolation_info.h"
@@ -55,10 +56,9 @@ const char kHasSetScriptOnAllUrlsPrefName[] = "has_set_script_all_urls";
 
 // Returns true if |extension| should always be enabled in incognito mode.
 bool IsWhitelistedForIncognito(const Extension* extension) {
-  return FeatureProvider::GetBehaviorFeature(
-             BehaviorFeature::kWhitelistedForIncognito)
-      ->IsAvailableToExtension(extension)
-      .is_available();
+  const Feature* feature = FeatureProvider::GetBehaviorFeature(
+      BehaviorFeature::kWhitelistedForIncognito);
+  return feature && feature->IsAvailableToExtension(extension).is_available();
 }
 
 // Returns |extension_id|. See note below.
