chrome/common/extensions/sync_helper.cc
@@ -10,6 +10,7 @@
 #include "extensions/common/constants.h"
 #include "extensions/common/extension.h"
 #include "extensions/common/features/behavior_feature.h"
+#include "extensions/common/features/feature.h"
 #include "extensions/common/features/feature_provider.h"
 #include "extensions/common/manifest.h"
 #include "extensions/common/manifest_url_handlers.h"
@@ -19,11 +20,10 @@ namespace extensions {
 namespace sync_helper {
 
 bool IsSyncable(const Extension* extension) {
-  if (FeatureProvider::GetBehaviorFeature(BehaviorFeature::kDoNotSync)
-          ->IsAvailableToExtension(extension)
-          .is_available()) {
+  const Feature* feature =
+      FeatureProvider::GetBehaviorFeature(BehaviorFeature::kDoNotSync);
+  if (feature && feature->IsAvailableToExtension(extension).is_available())
     return false;
-  }
 
   // Default apps are not synced because otherwise they will pollute profiles
   // that don't already have them. Specially, if a user doesn't have default
