extensions/browser/guest_view/extensions_guest_view_manager_delegate.cc
@@ -67,7 +67,8 @@ bool ExtensionsGuestViewManagerDelegate::IsGuestAvailableToContext(
     GuestViewBase* guest) {
   const Feature* feature =
       FeatureProvider::GetAPIFeature(guest->GetAPINamespace());
-  CHECK(feature);
+  if (!feature)
+    return false;
 
   ProcessMap* process_map = ProcessMap::Get(context_);
   CHECK(process_map);
