extensions/common/features/feature_provider.cc
@@ -13,6 +13,7 @@
 #include "base/trace_event/trace_event.h"
 #include "content/public/common/content_switches.h"
 #include "extensions/common/extensions_client.h"
+#include "extensions/common/features/feature.h"
 #include "extensions/common/features/feature_util.h"
 #include "extensions/common/switches.h"
 
@@ -67,10 +68,10 @@ const Feature* GetFeatureFromProviderByName(const std::string& provider_name,
                                             const std::string& feature_name) {
   const Feature* feature =
       FeatureProvider::GetByName(provider_name)->GetFeature(feature_name);
-  if (!feature) {
-    CRASH_WITH_MINIDUMP("Feature \"" + feature_name + "\" not found in " +
-                        "FeatureProvider \"" + provider_name + "\"");
-  }
+  // We should always refer to existing features, but we can't CHECK here
+  // due to flaky JSONReader fails, see: crbug.com/176381, crbug.com/602936
+  DCHECK(feature) << "Feature \"" << feature_name << "\" not found in "
+                  << "FeatureProvider \"" << provider_name << "\"";
   return feature;
 }
 
